--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV = 'development'
-BASE_URL = './'
+BASE_URL = '/new/'
 
 VUE_APP_PUBLIC_PATH = './'
 VUE_APP_API = 'https://test.staven630.com/api'
