--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^8.0.0",
     "axios": "^0.21.1",
     "compression-webpack-plugin": "^5.0.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
+    "jquery": "^3.6.0",
+    "moment": "^2.25.3",
     "lib-flexible": "^0.3.2",
+    "postcss-loader": "^6.1.0",
     "postcss-px2rem": "^0.3.0",
+    "postcss-px2rem-exclude": "^0.0.6",
     "vant": "^2.12.20",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "esri-loader": "^2.14.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
